# brain-games

./: .brain_games.py.swp  .gitignore  .pyproject.toml.swp  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  project-check.yml
brain_games/: body.py  cli.py  engine.py  even_game.py  games_body.py
brain_games/games/: body.py  calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/tests/: conftest.py  test_calc_game.py  test_engine.py  test_even_game.py  test_gcd_game.py  test_prime_game.py  test_progression_game.py
brain_games/tests/fixtures/: output_1.txt  output_2.txt
