[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Сollection of mathematical games as the first project on Hexlet"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/python-project-49"
packages = [{include = "brain_games"}]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
