[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Сollection of mathematical games"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/python-project-49"
packages = [{include = "brain_games"}]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main_even"
brain-calc = "brain_games.scripts.brain_calc:main_calc"
brain-gcd = "brain_games.scripts.brain_gcd:main_gcd"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main_prime"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
